September 29 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Skull's weapon category changed from MISC to UNCATECORIZED;
	  the former is not a weapon but an inventory category and caused
	  a crash when the skull was wielded
	* Sparkles and/or flies over transparent pictures are no longer
	  themselves transparent
	* Camera now works even if the area is smaller than the screen
	* The underwater tunnel and New Attnam are now placed correctly
	* worldmap::WhatTerrainIsMostCommonAroundCurrentTerritorySquareIncludingTheSquareItself()
	  and worldmap::SmoothAltitude() optimized somewhat
	* Corrected the Mysterious Absence of Elpuri on the Busy Screen Bug

September 26 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Added lightning effect to bitmap
	* Prevented digging with broken pick-axes

September 24 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Now compiles on Linux again

September 23 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Monster generation *might* be a bit better again
	* Corrected a minor outlook bug in the equipment pictures around
	  the silhouette
	* Corrected a minor outlook bug in the equipment screen
	* Added colored light effects for many monsters and items

September 22 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Added parentheses around several macros in ivandef.h
	* Added MakeRGB24(), GetRed24(), GetGreen24() and GetBlue24() inline
	  functions
	* Renamed old color handling routines to MakeRGB16() etc.
	* Added rgb24 function to script and renamed rgb to rgb16
	* Emitation and luminance are 24 bit rgb values; lights may now be
	  colored and they can be mixed dynamically
	* Note: since rgb elements are in the range 0-255 instead of 0-511,
	  old light values are converted to new ones like this:
	  MakeRGB24(Light / 2, Light / 2, Light / 2)

September 17 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Flies added
	* Items inside chests carrid by player at death shown
	* 3 configurations added to chests: small, normal, large