@@ -335,3 +335,4 @@ Reading holy books should aggravate monsters.
 Time bomb.
 Prohibit vomiting over Avatar.
 Monster that only sees in red, green or blue light.
+Monsters that have died of poisoning should be poisoned when eaten.
