@@ -1,3 +1,7 @@
+September 30 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>
+
+	* Scabies' good effect now doesn't inflict damage upon friends and neutrals
+
 September 29 2002 Timo Kiviluoto <sonor@phpoint.fi>
 
 	* Skull's weapon category changed from MISC to UNCATECORIZED;
